test/Fail/Issue1391d.err
Issue1391d.agda:5.18: error: [ParseError]
Expected sequence of possibly hidden bound identifiers
